# BitBufferCpp

./: CMakeLists.txt
src/: bit_buffer.hpp
